Updated nav, background, and logo

--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -2,14 +2,15 @@
 
 @footerText: #fff;
 
-@menuText: #FC008B;
-@menuTextActive: rgb(219, 211, 235);
+@menuText: #FFAD5E;
+@menuTextActive: #005525;
 
 @background2016: #35267B;
+@background2017: #208648;
 
 @row-odd-fill: #5D4D78;
 @row-even-fill: #DBD3EB;
 
 @row-even-color: #002E46;
 
-@navbar-background: rgba(37, 27, 86, 0.8);
+@navbar-background: rgba(255, 255, 255, 0.8);
