--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -27,8 +27,13 @@ a.hilite:hover {
 
 .titleImageContainer {
   height: 130px;
-  padding-top: 70px;
-  margin-bottom: 30px
+  padding-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  background: url(/images/2017/lances.svg) no-repeat 50% top;
+  color: white;
 }
 
 .titleImage {
