Updated intro and about sections Extracted parallax styles to separate less file Updated background Removed some 2016 images from source

--- a/stylesheets/layout.less
+++ b/stylesheets/layout.less
@@ -5,7 +5,7 @@ body {
     line-height: 26pt;
 }
 
-.parallax__layer--base, .parallax__layer--objects {
+.parallax__layer--base {
     max-width: 1500px;
     margin: 0 auto;
 }
