Tickets table and background images

--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -8,9 +8,9 @@
 @background2016: #35267B;
 @background2017: #208648;
 
-@row-odd-fill: #5D4D78;
-@row-even-fill: #DBD3EB;
+@row-odd-fill: rgba(0, 0, 0, 0.30);
+@row-even-fill: rgba(56, 56, 56, 0.30);
 
-@row-even-color: #002E46;
+@row-even-color: #fff;
 
 @navbar-background: #fff;
