--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -103,6 +103,10 @@ a.hilite:hover {
   }
 }
 
+.tickets-title {
+  margin: 50px 0 200px;
+}
+
 .sponsor-row {
   .cm-sponsor-box {
     height: 120px;
