--- a/stylesheets/parallax.less
+++ b/stylesheets/parallax.less
@@ -74,6 +74,24 @@
   width: 100%;
 }
 
+.sils2 {
+  position: absolute;
+  top: 2600px;
+  width: 100%;
+}
+
+.castle-overlay {
+  position: absolute;
+  top: 1715px;
+  width: 100%;
+}
+
+.castle {
+  position: absolute;
+  top: 1000px;
+  width: 100%;
+}
+
 .asteroid1 {
   width: 450px;
   height: auto;
