Updating tickets table styles

--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -8,8 +8,8 @@
 @background2016: #35267B;
 @background2017: #208648;
 
-@row-odd-fill: rgba(0, 0, 0, 0.30);
-@row-even-fill: rgba(56, 56, 56, 0.30);
+@row-odd-fill: rgba(35,54,43, 0.67);
+@row-even-fill: rgba(76, 92, 82, 0.84);
 
 @row-even-color: #fff;
 
