--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -124,41 +124,51 @@ a.hilite:hover {
   }
 }
 
-.tickets-box table {
-  width: 100%;
-  font-size: 18pt;
+.tickets-box {
+  table {
+    width: 100%;
+    font-size: 18pt;
 
-  thead tr td {
-    padding-bottom: 15px
-  }
+    thead tr td {
+      padding-bottom: 15px;
 
-  td {
-    width: 25%;
-    padding: 10px;
-  }
+      &.venue-column {
+        width: 60%;
+      }
+    }
 
-  p {
-    margin: 0;
-    line-height: 20pt
-  }
-
-  .ticket-row-odd {
     td {
-      background: @row-odd-fill;
-      cursor: pointer;
+      width: 20%;
+      padding: 10px;
+    }
+
+    p {
+      margin: 0;
+      line-height: 20pt
+    }
+
+    .ticket-row-odd {
+      td {
+        background: @row-odd-fill;
+        cursor: pointer;
+      }
+
+    }
+
+    .ticket-row-even {
+      td {
+        color: @row-even-color;
+        background: @row-even-fill;
+        cursor: pointer;
+      }
+
     }
 
   }
-
-  .ticket-row-even {
-    td {
-      color: @row-even-color;
-      background: @row-even-fill;
-      cursor: pointer;
-    }
-
+  p.legend {
+    text-align: right;
+    font-size: 26px;
   }
-
 }
 
 .speaker-image-container {
@@ -178,16 +188,17 @@ a.hilite:hover {
 .speaker-link {
   cursor: hand;
 }
+
 .speaker-link-pg {
   cursor: hand;
 }
 
 .byline {
-    font-size: 0.7em;
-    line-height: 1.3em;
-    text-transform: none;
-    margin-top: -10px;
-    font-weight: light;
+  font-size: 0.7em;
+  line-height: 1.3em;
+  text-transform: none;
+  margin-top: -10px;
+  font-weight: light;
 }
 
 .luchanaut {
@@ -220,7 +231,7 @@ a.hilite:hover {
 
 @import "parallax";
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
   // stuff to show/hide on phones
   body {
     font-size: 14pt;
@@ -296,7 +307,7 @@ a.hilite:hover {
 
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
   // stuff to show on not-phones
   .luchanaut {
     width: 150px
@@ -313,7 +324,7 @@ a.hilite:hover {
 
 }
 
-@media(min-width:992px) {
+@media (min-width: 992px) {
   .luchanaut {
     width: 300px
   }
@@ -324,7 +335,7 @@ a.hilite:hover {
 
 }
 
-@media(min-width:1200px) {
+@media (min-width: 1200px) {
   .stars,
   .stars-deep {
     background-size: 90%
