--- a/stylesheets/parallax.less
+++ b/stylesheets/parallax.less
@@ -80,16 +80,20 @@
   width: 85%;
 }
 
-.castle-overlay {
-  position: absolute;
-  top: 1990px;
+.castle-container {
+  position:absolute;
+  top: 1560px;
   width: 100%;
-}
 
-.castle {
-  position: absolute;
-  top: 1500px;
-  width: 100%;
+  .castle {
+    width: 100%;
+  }
+
+  .castle-overlay {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
 }
 
 .moon {
