Tweaking castle and adding clouds

--- a/stylesheets/parallax.less
+++ b/stylesheets/parallax.less
@@ -76,7 +76,7 @@
 
 .sils2 {
   position: absolute;
-  top: 1700px;
+  top: 1800px;
   width: 85%;
 }
 
@@ -101,4 +101,18 @@
   top: 1500px;
   width: 25%;
   right: 20%
+}
+
+.clouds3 {
+  position: absolute;
+  top: 1600px;
+  left: -30%;
+  width: 80%;
+}
+
+.clouds4 {
+  position: absolute;
+  top: 2300px;
+  left: -20%;
+  width: 95%;
 }
