--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -469,7 +469,7 @@ a.hilite:hover {
 }
 .sils2 {
   position: absolute;
-  top: 1700px;
+  top: 1800px;
   width: 85%;
 }
 .castle-container {
@@ -490,6 +490,18 @@ a.hilite:hover {
   top: 1500px;
   width: 25%;
   right: 20%;
+}
+.clouds3 {
+  position: absolute;
+  top: 1600px;
+  left: -30%;
+  width: 80%;
+}
+.clouds4 {
+  position: absolute;
+  top: 2300px;
+  left: -20%;
+  width: 95%;
 }
 @media (max-width: 768px) {
   body {
