Updating colo(u)rs and such.

--- a/stylesheets/layout.less
+++ b/stylesheets/layout.less
@@ -11,7 +11,7 @@ body {
 }
 
 .basic-content-page {
-    background: @background2016 url('/images/2016/stars_background.svg') 0 0 repeat;
+    background: @background2017 url('/images/2017/star-bg.png') 0 0 repeat;
     margin-top: 70px;
     margin-bottom: 40px;
 }
