--- a/_layouts/indexlayout.html
+++ b/_layouts/indexlayout.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8" />
 	<meta name="description" content="Codemania - New Zealand&#39;s premier developer conference" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta property="og:title" content="Codemania 2016">
-<meta property="og:site_name" content="Codemania 2016">
+	<meta property="og:title" content="Codemania 2017">
+<meta property="og:site_name" content="Codemania 2017">
 <meta property="og:url" content="http://codemania.io">
 <meta property="og:description" content="Codemania is New Zealand's premier conference for software developers. Come along and learn from the best of the best.">
 <meta property="fb:app_id" content="">
@@ -38,7 +38,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="/#top" class="nav-link">HOME</a></li>
 					<li><a href="/agenda.html">AGENDA</a></li>
-					<li><a href="/#about" class="nav-link">ABOUT <span class="sr-only">(current)</span></a></li>
+					<li><a href="/#about" class="nav-link">ABOUT</a></li>
 					<li><a href="/#tickets" class="nav-link">TICKETS</a></li>
 					<li><a href="/#sponsors" class="nav-link">SPONSORS</a></li>
 				</ul>
