Fixing title text in mobile sizes

--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -27,8 +27,9 @@ a.hilite:hover {
 
 .titleImageContainer {
   height: 130px;
-  padding-top: 38px;
-  margin-bottom: 30px;
+  width: 775px;
+  padding-top: 35px;
+  margin:0 auto 30px;
   text-align: center;
   text-transform: uppercase;
   font-weight: 500;
@@ -105,6 +106,14 @@ a.hilite:hover {
 
 .tickets-title {
   margin: 50px 0 200px;
+  position: relative;
+
+  .fuobe2 {
+    position: absolute;
+    width: 15%;
+    top: 45%;
+    right: 15%;
+  }
 }
 
 .sponsor-row {
@@ -240,7 +249,8 @@ a.hilite:hover {
 
   .titleImageContainer {
     height: 90px;
-    padding-top: 60px;
+    width: 460px;
+    padding-top: 22px;
     margin-bottom: 30px
   }
 
