--- a/stylesheets/layout.less
+++ b/stylesheets/layout.less
@@ -1,7 +1,9 @@
+@import "colors";
+
 body {
-	background-color: @background2017;
-	color: @bodyText;
-        font-size: 24pt;
+    background-color: @background2017;
+    color: @bodyText;
+    font-size: 24pt;
     line-height: 26pt;
 }
 
@@ -11,7 +13,7 @@ body {
 }
 
 .basic-content-page {
-    background: @background2017 url('/images/2017/star-bg.png') 0 0 repeat;
+    background: @background2017 url('/images/2016/stars_background.svg') 0 0 repeat;
     margin-top: 70px;
     margin-bottom: 40px;
 }
@@ -47,7 +49,7 @@ body {
                 padding-bottom: 30px;
             }
         }
-            .navbar-collapse {
+        .navbar-collapse {
             text-align: center;
         }
     }
@@ -59,5 +61,4 @@ body {
     margin-right: auto;
     text-align: center;
 }
-
 
