--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -243,8 +243,9 @@ a.hilite:hover {
 }
 .titleImageContainer {
   height: 130px;
-  padding-top: 38px;
-  margin-bottom: 30px;
+  width: 775px;
+  padding-top: 35px;
+  margin: 0 auto 30px;
   text-align: center;
   text-transform: uppercase;
   font-weight: 500;
@@ -308,6 +309,13 @@ a.hilite:hover {
 }
 .tickets-title {
   margin: 50px 0 200px;
+  position: relative;
+}
+.tickets-title .fuobe2 {
+  position: absolute;
+  width: 15%;
+  top: 45%;
+  right: 15%;
 }
 .sponsor-row .cm-sponsor-box {
   height: 120px;
@@ -510,7 +518,8 @@ a.hilite:hover {
   }
   .titleImageContainer {
     height: 90px;
-    padding-top: 60px;
+    width: 460px;
+    padding-top: 22px;
     margin-bottom: 30px;
   }
   .tickets-box p {
