--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -95,6 +95,27 @@ a.hilite:hover {
   }
 }
 
+.about-text-container {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  max-width: 760px;
+  margin: 0 auto;
+  clear: both;
+  font-size: 21px;
+  line-height: 1.2em;
+  justify-content: space-around;
+
+  .about-text-column {
+    width: 50%;
+    padding: 0 15px;
+
+    p {
+      margin: 0 0 1.5em;
+    }
+  }
+}
+
 .about-text {
   font-size: 21px;
   line-height: 1.2em;
@@ -279,6 +300,14 @@ a.hilite:hover {
 
   .titleImage {
     height: 30px
+  }
+
+  .about-text-container {
+    display: block;
+
+    .about-text-column {
+      width: 100%;
+    }
   }
 
   .buytickets {
