--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -300,6 +300,24 @@ a.hilite:hover {
   top: -100%;
   right: 20%;
 }
+.about-text-container {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  max-width: 760px;
+  margin: 0 auto;
+  clear: both;
+  font-size: 21px;
+  line-height: 1.2em;
+  justify-content: space-around;
+}
+.about-text-container .about-text-column {
+  width: 50%;
+  padding: 0 15px;
+}
+.about-text-container .about-text-column p {
+  margin: 0 0 1.5em;
+}
 .about-text {
   font-size: 21px;
   line-height: 1.2em;
@@ -544,6 +562,12 @@ a.hilite:hover {
   }
   .titleImage {
     height: 30px;
+  }
+  .about-text-container {
+    display: block;
+  }
+  .about-text-container .about-text-column {
+    width: 100%;
   }
   .buytickets {
     margin: -50px auto 0 auto;
