--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -116,6 +116,10 @@ a.hilite:hover {
   }
 }
 
+.sponsors-title {
+  margin-top: 100px;
+}
+
 .about-text {
   font-size: 21px;
   line-height: 1.2em;
