--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -318,6 +318,9 @@ a.hilite:hover {
 .about-text-container .about-text-column p {
   margin: 0 0 1.5em;
 }
+.sponsors-title {
+  margin-top: 100px;
+}
 .about-text {
   font-size: 21px;
   line-height: 1.2em;
