Adding some space between friends and footer sections

--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -212,6 +212,10 @@ a.hilite:hover {
   margin-bottom: -60px;
 }
 
+.footer-row {
+  margin-top: 150px;
+}
+
 .two {
   animation-duration: 20s;
   animation-name: spacejail-rotate-2
