--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -109,6 +109,7 @@ a.hilite:hover {
   .about-text-column {
     width: 50%;
     padding: 0 15px;
+    z-index: 99;
 
     p {
       margin: 0 0 1.5em;
