--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -280,10 +280,11 @@ a.hilite:hover {
   }
 
   .titleImageContainer {
-    height: 90px;
-    width: 460px;
-    padding-top: 22px;
-    margin-bottom: 30px
+    height: 60px;
+    width: 375px;
+    padding-top: 15px;
+    margin-bottom: 30px;
+    font-size: 12pt;
   }
 
   .tickets-box {
