--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -274,11 +274,11 @@ a.hilite:hover {
 }
 .speaker-row .speaker-box {
   text-align: center;
-  width: 150px;
-  margin: 30px 20px;
+  width: 140px;
+  margin: 30px 15px;
 }
 .speaker-row .speaker-box img {
-  width: 150px;
+  width: 140px;
   height: auto;
   margin: 0 0 15px;
   display: block;
@@ -545,10 +545,11 @@ a.hilite:hover {
     line-height: 15pt;
   }
   .titleImageContainer {
-    height: 90px;
-    width: 460px;
-    padding-top: 22px;
+    height: 60px;
+    width: 375px;
+    padding-top: 15px;
     margin-bottom: 30px;
+    font-size: 12pt;
   }
   .tickets-box p {
     margin-left: 10px;
