--- a/stylesheets/typography.less
+++ b/stylesheets/typography.less
@@ -1,7 +1,10 @@
 .basic-content-page {
+    line-height: 1.2em;
+
     h1, h2, h3 {
         text-align: center;
         font-size: 1em;
+        margin: 0.5em 0 1.5em;
     }
     h1 {
         font-size: 1.1em;
@@ -12,6 +15,19 @@
         font-weight: normal;
         text-shadow: 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive, 0 0 4px @menuTextActive;
     }
+
+    p {
+        margin: 0 0 1.5em;
+    }
+
+    .mainBody ul {
+        margin: 0 0 1em;
+
+        li {
+            margin: 0 0 0.5em;
+        }
+    }
+
 }
 
 .lunchBox-bold {
