--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -532,6 +532,7 @@ a.hilite:hover {
 .castle-container .castle-overlay {
   position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
 }
 .moon {
