Put early-bird end date
and bring the legend in off the right hand edge a little.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -397,6 +397,7 @@ a.hilite:hover {
 }
 .tickets-box p.legend {
   text-align: right;
+  margin-right: 12px;
   font-size: 13pt;
 }
 .speaker-image-container {
