New TM logo and updated CSS to make it fit

--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -151,6 +151,7 @@ a.hilite:hover {
     img {
       display: inline-block;
       vertical-align: middle;
+      max-width: 280px;
     }
     &:before {
       content: '';
