New agenda for 2017

--- a/stylesheets/agenda.less
+++ b/stylesheets/agenda.less
@@ -1,5 +1,6 @@
 table.agenda-table {
   width: 100%;
+  margin-bottom: 50px;
   td {
     text-align: center;
     padding: 5px;
@@ -9,6 +10,7 @@ table.agenda-table {
       border: dotted 1px white;
       h3 {
         color: @menuText;
+        font-size: 1.2em;
       }
       a {
         color: @bodyText;
