--- a/_layouts/speaker2017.html
+++ b/_layouts/speaker2017.html
@@ -1,9 +1,9 @@
 ---
-layout: 2016site
+layout: 2017site
 ---
 <h1>{{page.speakerName}}</h1>
 <a href="http://twitter.com/{{page.speakerTwitter}}"><img src="/images/speakers/{{page.speakerImage}}" class="blurb-speaker-image"/></a>
-<p class="clearfix">{{page.speakerBio}}</p>
+<p>{{page.speakerBio}}</p>
 <h2>{{page.talkTitle}}</h2>
 <p>{{page.talkBlurb}}</p>
 <br />
