sponsor images need a max height

--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -148,10 +148,11 @@ a.hilite:hover {
   .cm-sponsor-box {
     height: 120px;
     text-align: center;
-    img {
+    a img {
       display: inline-block;
       vertical-align: middle;
       max-width: 280px;
+      max-height: 120px;
     }
     &:before {
       content: '';
